[workspace]
resolver = "3"
members = ["simuverse", "run-wasm"]
default-members = ["simuverse"]

[workspace.package]
edition = "2024"
rust-version = "1.92"

[profile.wasm-release]
inherits = "release"
debug = 0
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"
# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1